tests/fixtures/invalid/min_none.py
# Cannot call min() with None
x = min(None)
